assets/css/main.css
/* ... */
  @media (max-width: 991px) {
    .app-design__content h2 {
      font-size: 48px; }
    .app-design__visual {
      width: 922px;
      height: 586px; } }
  @media (max-width: 767px) {
    .app-design {
      height: 400px;
      padding: 60px 0; }
      .app-design__content {
        text-align: center; }
        .app-design__content h2 {
          font-size: 32px; }
          .app-design__content h2 br {
            display: none; }
        .app-design__content p {
          margin: 0 auto 20px auto; }
      .app-design__visual {
        top: auto;
        left: 50%;
        bottom: -175px;
        transform: translateX(-50%);
        width: 679px;
        height: 439px; } }
  @media (max-width: 480px) {
    .app-design__visual {
      bottom: -100px;
      width: 576px;
      height: 366px; } }

/************************* Web Design ************************ */
.web-design {
  position: relative;
  width: 100%;
  padding: 200px 0;
  background-color: #fafafa;
  overflow: hidden; }
  .web-design__wrapper {
    display: flex;
    justify-content: flex-end; }
  .web-design__visual {
    position: absolute;
    top: 50%;
    right: 65%;
    transform: translateY(-45%);
    width: 500px;
    height: 581px;
    margin: 0;
    background-image: url("../img/selfIdentityPack.png");
    background-position: left;
    background-size: 100%;
    background-repeat: no-repeat; }
  @media (max-width: 991px) {
    .web-design__content h2 {
      font-size: 48px; }
    .web-design__visual {
      right: 45%;
      width: 741px;
      height: 520px; } }
  @media (max-width: 767px) {
    .web-design {
      height: 525px;
      padding: 60px 0; }
      .web-design__wrapper {
        justify-content: center; }
      .web-design__content {
        text-align: center; }
        .web-design__content h2 {
          font-size: 32px; }
          .web-design__content h2 br {
            display: none; }
      .web-design__visual {
        top: auto;
        right: auto;
        left: 50%;
        bottom: 0;
        transform: translateX(-50%);
        width: 523px;
        height: 376px; } }
  @media (max-width: 480px) {
    .web-design {
      height: 425px; }
      .web-design__visual {
        width: 392px;
        height: 275px; } }

/************************* Work ************************ */
.work {
  position: relative;
  width: 100%;
  padding: 120px 0 60px 0;
  background-color: #fafafa; }
  .work__list {
    position: relative;
    padding: 60px 0; }
    .work__list::before {
      content: "";
      position: absolute;
      top: 0;
      left: 175px;
      right: 125px;
      bottom: 0;
      border: 10px solid #853f98;
      border-radius: 20px; }
    .work__list-el {
      display: none; }
      .work__list-el--is-active {
        display: flex;
        align-items: center;
        justify-content: space-between; }
        .work__list-el--is-active .work__content-blurb h3,
        .work__list-el--is-active .work__content-blurb p {
          animation: scaleUp 0.6s; }
        .work__list-el--is-active .work__visual {
          animation: scaleUp 0.6s; }
  .work__content {
    position: relative;
    width: 42.5%;
    z-index: 1; }
    .work__content-blurb h3 {
      font-size: 54px; }
    .work__content-blurb p {
      max-width: 350px; }
  .work__visual {
    position: relative;
    width: 52.5%;
    box-shadow: 5px 8px 30px 1px rgba(0, 0, 0, 0.21);
    z-index: 2; }
    .work__visual img {
      display: block;
      width: 100%; }
  .work__navigation {
    display: flex;
    width: 100px;
    justify-content: space-between;
    margin: 45px auto 0 auto; }
    .work__navigation-el {
      display: block;
      width: 12px;
      height: 12px;
      background-color: #e0e0e0;
      border-radius: 50%;
      cursor: pointer; }
      .work__navigation-el--is-active {
        background-color: transparent;
        box-shadow: 0 0 0 2px #585858; }
  @media (max-width: 991px) {
    .work {
      padding: 90px 0 60px 0; }
      .work__heading {
        font-size: 48px; }
      .work__list {
        padding: 0; }
        .work__list::before {
          top: 45px;
          left: 0;
          right: 0;
          bottom: 45px; }
        .work__list-el--is-active {
          flex-direction: column; }
      .work__content {
        width: auto;
        max-width: 100%;
        margin-bottom: 45px;
        text-align: center; }
        .work__content-blurb {
          padding: 0 15px; }
          .work__content-blurb h3 {
            font-size: 42px; }
          .work__content-blurb p {
            max-width: 300px; }
      .work__visual {
        width: 600px;
        max-width: 75%; } }
  @media (max-width: 767px) {
    .work__heading {
      font-size: 32px; }
    .work__content-blurb h3 {
      font-size: 30px; } }
  @media (max-width: 480px) {
    .work__list::before {
      display: none; }
    .work__visual {
      max-width: 100%; } }

/************************* Blog ************************ */
.blog {
  position: relative;
  padding: 60px 0; }
  .blog__wrapper {
    display: flex;
    justify-content: space-between; }
  .blog__post {
    width: 33.33%;
    margin-right: 30px; }
    .blog__post:last-child {
      margin-right: 0; }
    .blog__post-thumbnail {
      width: 100%;
      box-shadow: 5px 8px 30px 1px rgba(0, 0, 0, 0.21); }
      .blog__post-thumbnail img {
        display: block;
        width: 100%; }
    .blog__post-excerpt h3 {
      color: #585858;
      font-size: 24px; }
  .blog__view-more {
    margin-top: 90px;
    text-align: center; }
    .blog__view-more--el {
      padding: 8px 30px; }
/* ... */

